# obs-audio-writer-filter

./: CMakeLists.txt  LICENSE  README.md  audio-writer-filter.c  audio-writer-filter.h  coreaudio-writer.c  coreaudio-writer.h  internal-writer.c
data/locale/: en-US.ini
